# ml-ops

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data.dvc  model.onnx.dvc  pyproject.toml
.dvc/: config
.github/workflows/: main.yml  pre-commit.yml
mlp_digits/: infer.py  train.py
mlp_digits/conf/: config.yaml
outputs/2023-12-13/21-02-08/.hydra/: config.yaml  hydra.yaml
outputs/2023-12-13/21-03-20/.hydra/: hydra.yaml
