[tool.poetry]
name = "cats_and_dogs"
version = "0.1.0"
description = "Hometask for intro to ML Ops, its a projects for classification between cats and dogs"
authors = ["Андрей Шан <avshan@edu.hse.ru>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
torch = "^2.1.1"
numpy = "^1.26.2"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
