[tool.poetry]
name = "mlp_digits"
version = "0.1.0"
description = "Hometask for intro to ML Ops, its a projects for classification between cats and dogs"
authors = ["Андрей Шан <avshan@edu.hse.ru>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pre-commit = "^3.6.0"
dvc = "^3.33.3"
onnxruntime = "^1.16.3"
skl2onnx = "^1.16.0"
dvc-gdrive = "^2.20.0"
hydra-core = "^1.3.2"
pandas = "^2.1.4"
mlflow = "^2.9.2"
gitpython = "^3.1.40"

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["mlp_digits"]
profile = "black"
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
